@@ -7,6 +7,7 @@
 * Better jumps from the outline window. Last good and the current parsed
   info are taken into account.
 * Better undo of the automatically trimmed empty opened lines.
+* Search indicators are configurable now per skin.
 
 2013 Jun 29 Sergey Satskiy <sergey.satskiy@gmail.com>
 
